[gd_scene load_steps=6 format=3 uid="uid://u6y63o4kjcwx"]

[ext_resource type="Script" uid="uid://lgyxphpfdwdf" path="res://Scripts/UI/ui.gd" id="1_636u5"]
[ext_resource type="PackedScene" uid="uid://jpgrhlpfc20v" path="res://Scenes/UI/Slot.tscn" id="2_636u5"]
[ext_resource type="Texture2D" uid="uid://wwmqdsahterd" path="res://Images/Characters/Main Character/skeleton2_v2_2.png" id="3_akgwn"]
[ext_resource type="PackedScene" uid="uid://b2ay3xb48p4fo" path="res://Scenes/UI/Item.tscn" id="3_b83rk"]

[sub_resource type="LabelSettings" id="LabelSettings_b83rk"]
font_size = 32

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 3840.0
offset_bottom = 2160.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_636u5")

[node name="Inventory" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1280.0
offset_bottom = 1880.0
grow_horizontal = 0
color = Color(0.174626, 0.17462596, 0.17462596, 1)

[node name="MarginContainer" type="MarginContainer" parent="Inventory"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Inventory/MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="Inventory/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="Button" type="Button" parent="Inventory/MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(480, 80)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Currently Spawn Item"

[node name="VBoxContainer" type="VBoxContainer" parent="Inventory/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 700)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="GridContainer" type="GridContainer" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Slot" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/GridContainer" groups=["equipment_slots", "player_equipment_slots"] instance=ExtResource("2_636u5")]
layout_mode = 2
type = 8

[node name="Slot4" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/GridContainer" groups=["equipment_slots", "player_equipment_slots"] instance=ExtResource("2_636u5")]
layout_mode = 2
type = 7

[node name="Slot5" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/GridContainer" groups=["equipment_slots", "player_equipment_slots"] instance=ExtResource("2_636u5")]
layout_mode = 2
type = 7

[node name="Item" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/GridContainer" instance=ExtResource("3_b83rk")]

[node name="GridContainer2" type="GridContainer" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
columns = 2

[node name="Slot" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/GridContainer2" groups=["equipment_slots", "player_equipment_slots"] instance=ExtResource("2_636u5")]
custom_minimum_size = Vector2(200, 400)
layout_mode = 2
type = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
texture = ExtResource("3_akgwn")
expand_mode = 5

[node name="Slot" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2/GridContainer" groups=["equipment_slots", "player_equipment_slots"] instance=ExtResource("2_636u5")]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
type = 5

[node name="Slot2" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2/GridContainer" groups=["equipment_slots", "player_equipment_slots"] instance=ExtResource("2_636u5")]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
type = 6

[node name="HBoxContainer3" type="HBoxContainer" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2

[node name="GridContainer2" type="GridContainer" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_vertical = 4

[node name="Slot2" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3/GridContainer2" groups=["equipment_slots", "player_equipment_slots"] instance=ExtResource("2_636u5")]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
type = 4

[node name="Slot3" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3/GridContainer2" groups=["equipment_slots", "player_equipment_slots"] instance=ExtResource("2_636u5")]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
type = 9

[node name="GridContainer3" type="GridContainer" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_vertical = 4

[node name="Slot2" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3/GridContainer3" groups=["equipment_slots", "player_equipment_slots"] instance=ExtResource("2_636u5")]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
type = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Slot" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2" groups=["equipment_slots", "player_equipment_slots"] instance=ExtResource("2_636u5")]
layout_mode = 2
type = 3

[node name="Slot2" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2" groups=["equipment_slots", "player_equipment_slots"] instance=ExtResource("2_636u5")]
layout_mode = 2
type = 3

[node name="Slot3" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2" groups=["equipment_slots", "player_equipment_slots"] instance=ExtResource("2_636u5")]
layout_mode = 2
type = 3

[node name="Slot4" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2" groups=["equipment_slots", "player_equipment_slots"] instance=ExtResource("2_636u5")]
layout_mode = 2
type = 3

[node name="Slot5" parent="Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2" groups=["equipment_slots", "player_equipment_slots"] instance=ExtResource("2_636u5")]
layout_mode = 2
type = 3

[node name="ScrollContainer2" type="ScrollContainer" parent="Inventory/MarginContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="Inventory/MarginContainer/VBoxContainer/ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 10

[node name="Footer" type="HBoxContainer" parent="Inventory/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="Control" type="Control" parent="Inventory/MarginContainer/VBoxContainer/Footer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Inventory/MarginContainer/VBoxContainer/Footer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.5
offset_top = -11.5
offset_right = 59.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Current Weight: # / #"
label_settings = SubResource("LabelSettings_b83rk")

[node name="Control2" type="Control" parent="Inventory/MarginContainer/VBoxContainer/Footer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Inventory/MarginContainer/VBoxContainer/Footer/Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Gold: "

[node name="Enemy Inventory" type="ColorRect" parent="."]
visible = false
layout_mode = 1
offset_right = 1280.0
offset_bottom = 1880.0
color = Color(0.174626, 0.17462596, 0.17462596, 1)

[node name="MarginContainer" type="MarginContainer" parent="Enemy Inventory"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Enemy Inventory/MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="Enemy Inventory/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="Button" type="Button" parent="Enemy Inventory/MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(480, 80)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Currently Spawn Item"

[node name="VBoxContainer" type="VBoxContainer" parent="Enemy Inventory/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 700)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="GridContainer" type="GridContainer" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Slot" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/GridContainer" groups=["equipment_slots"] instance=ExtResource("2_636u5")]
layout_mode = 2
type = 8
inventory_owner = 1

[node name="Slot4" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/GridContainer" groups=["equipment_slots"] instance=ExtResource("2_636u5")]
layout_mode = 2
type = 7
inventory_owner = 1

[node name="Slot5" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/GridContainer" groups=["equipment_slots"] instance=ExtResource("2_636u5")]
layout_mode = 2
type = 7
inventory_owner = 1

[node name="GridContainer2" type="GridContainer" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
columns = 2

[node name="Slot" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/GridContainer2" groups=["equipment_slots"] instance=ExtResource("2_636u5")]
custom_minimum_size = Vector2(200, 400)
layout_mode = 2
type = 1
inventory_owner = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2/GridContainer"]
layout_mode = 2
texture = ExtResource("3_akgwn")
expand_mode = 5

[node name="Slot" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2/GridContainer" groups=["equipment_slots"] instance=ExtResource("2_636u5")]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
type = 5
inventory_owner = 1

[node name="Slot2" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2/GridContainer" groups=["equipment_slots"] instance=ExtResource("2_636u5")]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
type = 6
inventory_owner = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2

[node name="GridContainer2" type="GridContainer" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_vertical = 4

[node name="Slot2" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3/GridContainer2" groups=["equipment_slots"] instance=ExtResource("2_636u5")]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
type = 4
inventory_owner = 1

[node name="Slot3" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3/GridContainer2" groups=["equipment_slots"] instance=ExtResource("2_636u5")]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
type = 9
inventory_owner = 1

[node name="GridContainer3" type="GridContainer" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_vertical = 4

[node name="Slot2" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer3/GridContainer3" groups=["equipment_slots"] instance=ExtResource("2_636u5")]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
type = 2
inventory_owner = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Slot" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2" groups=["equipment_slots"] instance=ExtResource("2_636u5")]
layout_mode = 2
type = 3
inventory_owner = 1

[node name="Slot2" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2" groups=["equipment_slots"] instance=ExtResource("2_636u5")]
layout_mode = 2
type = 3
inventory_owner = 1

[node name="Slot3" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2" groups=["equipment_slots"] instance=ExtResource("2_636u5")]
layout_mode = 2
type = 3
inventory_owner = 1

[node name="Slot4" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2" groups=["equipment_slots"] instance=ExtResource("2_636u5")]
layout_mode = 2
type = 3
inventory_owner = 1

[node name="Slot5" parent="Enemy Inventory/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2" groups=["equipment_slots"] instance=ExtResource("2_636u5")]
layout_mode = 2
type = 3
inventory_owner = 1

[node name="ScrollContainer2" type="ScrollContainer" parent="Enemy Inventory/MarginContainer/VBoxContainer" groups=["player_equipment_slots"]]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="Enemy Inventory/MarginContainer/VBoxContainer/ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 10

[node name="Inventory3" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -280.0
offset_right = 3840.0
grow_vertical = 0
color = Color(0.174626, 0.17462596, 0.17462596, 1)

[connection signal="button_up" from="Inventory/MarginContainer/VBoxContainer/Header/Button" to="." method="_on_button_button_up"]
[connection signal="button_down" from="Enemy Inventory/MarginContainer/VBoxContainer/Header/Button" to="." method="_on_enemy_button_down"]
